Added Footer, Edited Sidebar content

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,10 +1,10 @@
 
 
 $basefont: 'Monoton', cursive;
-$firstfont:'Cabin Sketch', cursive;
+$h5font:'Cabin Sketch', cursive;
 $secondfont:'Lobster', cursive;
 $thirdfont: 'Kavivanar', cursive;
 $fourthfont: 'Indie Flower', cursive;
-$fontfive: 'Chewy', cursive;
+$h4font: 'Chewy', cursive;
 $defaultfont: 'Arima Madurai', cursive;
 $heading: 75px;
