--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,27 @@ body {
     border: 0px solid;
     background-color: #ffffff45;
     width: 100%;
-    height: 150px; }
+    display: grid;
+    grid-template-columns: auto auto 5fr;
+    grid-gap: 10px; }
+    body footer div {
+      display: inline-block;
+      padding: 5px; }
+      body footer div ul {
+        margin-left: -50px; }
+        body footer div ul li {
+          display: inline-block;
+          padding-left: 10px; }
+      body footer div a {
+        text-decoration: none;
+        color: #183A37; }
+        body footer div a:hover {
+          text-decoration: underline;
+          color: #f9f9f9; }
+    body footer #about {
+      grid-column: 1 / 2; }
+    body footer #related-sites {
+      grid-column: 2 / 3; }
 
 @media only screen and (min-width: 1000px) {
   body {
@@ -225,7 +245,7 @@ body {
         white-space: nowrap; }
         body section .sidebar .heading {
           height: 50px;
-          margin-top: -22px;
+          margin-top: -10px;
           padding: 1px;
           padding-left: 10px;
           display: block; }
@@ -247,6 +267,11 @@ body {
             margin-left: 17em; }
         body section #images .homeImg {
           height: 250px;
-          width: 300px; } }
+          width: 300px; }
+    body footer div ul {
+      margin-left: -40px; }
+      body footer div ul li {
+        display: block;
+        padding-left: 0px; } }
 
 /*# sourceMappingURL=style.css.map */
