--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -103,7 +103,7 @@
   white-space: nowrap;
   .heading {
     height: 50px;
-    margin-top: -22px;
+    margin-top: -10px;
     padding: 1px;
     padding-left: 10px;
     display: block;
@@ -124,7 +124,36 @@
   border: 0px solid;
   background-color: $transparent;
   width: 100%;
-  height: 150px;
+  // height: 180px;
+  display: grid;
+  grid-template-columns: auto auto 5fr;
+  grid-gap: 10px;
+  div {
+    display: inline-block;
+    padding: 5px;
+    ul {
+      margin-left: -50px;
+      li {
+        display: inline-block;
+        padding-left: 10px;
+      }
+    }
+    a {
+      text-decoration: none;
+      color: $green;
+      &:hover {
+        text-decoration: underline;
+        color: $snow;
+      }
+    }
+  }
+  #about {
+    grid-column: 1 / 2;
+
+  }
+  #related-sites {
+    grid-column: 2 / 3;
+  }
 }
 ////////////////////////responsive code//////////////////////////
 @mixin desktopview {
