--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin+Sketch|Monoton&subset=cyrillic,cyrillic-ext,latin-ext,vietnamese');
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Kavivanar');
 @import url('https://fonts.googleapis.com/css?family=Arima+Madurai|Chewy');
-
+////////////////////////////////////////////////////////
 body {
   background-image: url(../images/background/back1.jpg);
   width: 1000px;
@@ -49,7 +49,7 @@ body {
       }
     }
   }
- //////////////////////////////////////////////////////////////////////////
+ /////////////////////////////////////////////////////////////
  section {
    display: grid;
    grid-template-areas:
@@ -61,7 +61,7 @@ body {
    'sidebarTwo'
    'sectionfour';
    grid-row-gap: 10px;
-
+   //////////////////////category images///////////
    #images {
        grid-area: images;
        border: 0px solid blue;
@@ -91,13 +91,14 @@ body {
          margin-left: 54px;
        }
      }
+     //////////////////////content//////////////
      #camping {
        background-color: #b1706761;
        grid-area: section;
        .camping {
          padding: 5px;
          h4 {
-           font-family: $fontfive;
+           font-family: $h4font;
            font-size: 25px;
          }
        }
@@ -108,7 +109,7 @@ body {
        .fishing {
          padding: 5px;
          h4 {
-           font-family: $fontfive;
+           font-family: $h4font;
            font-size: 25px;;
          }
        }
@@ -119,7 +120,7 @@ body {
        .hiking {
          padding: 5px;
          h4 {
-           font-family: $fontfive;
+           font-family: $h4font;
            font-size: 25px;
          }
        }
@@ -130,23 +131,24 @@ body {
        .rock-climbing {
          padding: 5px;
          h4 {
-           font-family: $fontfive;
+           font-family: $h4font;
            font-size: 25px;
          }
        }
      }
+     //////////////////////////sidebar//////////////////
      #scroll-one {
        background-color: #b1706761;
        grid-area: sidebar;
        h5 {
-         font-family: $firstfont;
+         font-family: $h5font;
        }
      }
      #scroll-two {
        background-color: #b1706761;
        grid-area: sidebarTwo;
        h5 {
-         font-family: $firstfont;
+         font-family: $h5font;
        }
      }
 
@@ -160,11 +162,14 @@ body {
       }
     }
   }
+  /////////////footer/////////////////////////
   footer {
     @include footer;
+
   }
 
 }
+///////////////////////responsive desktopview//////////////
 @media only screen and (min-width: 1000px) {
   body {
     width: auto;
@@ -201,6 +206,17 @@ body {
              width: 300px;
            }
          }
+    }
+    footer {
+      div {
+        ul {
+          margin-left: -40px;
+          li {
+            display: block;
+            padding-left: 0px;
+          }
+        }
+      }
     }
   }
 }
