--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -166,3 +166,61 @@
   grid-column-gap: 10px;
   grid-row-gap: 0px;
 }
+////////////////////////////Gallery//////////////////////////////
+
+/////////////////////////overlay code///////////////////////
+@mixin overlaycenter {
+  .overlay {
+    left: 0;
+    right: 0;
+    @include gradientOne;
+    overflow: hidden;
+    width: 100%;
+    transform:scale(0);
+  }
+  &:hover .overlay {
+  transform: scale(1)
+  }
+}
+@mixin overlayright {
+  .overlay {
+    left: 100%;
+    right: 0;
+    width: 0;
+  }
+  &:hover .overlay {
+    width: 100%;
+    left: 0;
+  }
+}
+@mixin overlayleft {
+  .overlay {
+    left: 0;
+    right: 100%;
+    width: 0;
+  }
+  &:hover .overlay {
+    width: 100%;
+    right: 0;
+  }
+}
+@mixin overlay {
+  position: relative;
+  .overlay {
+    position: absolute;
+    bottom: 0;
+    @include gradientOne;
+    overflow: hidden;
+    height: 100%;
+    transition: .3s ease;
+    .text {
+      color: white;
+      font-size: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+  }
+}
