--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -3,7 +3,7 @@
 $basefont: 'Monoton', cursive;
 $h5font:'Cabin Sketch', cursive;
 $secondfont:'Lobster', cursive;
-$thirdfont: 'Kavivanar', cursive;
+$contactfont: 'Kavivanar', cursive;
 $fourthfont: 'Indie Flower', cursive;
 $h4font: 'Chewy', cursive;
 $defaultfont: 'Arima Madurai', cursive;
