--- a/scss/partials/_colorfunction.scss
+++ b/scss/partials/_colorfunction.scss
@@ -1,8 +1,6 @@
-$prune:#6F1616;
-$faluRed: #8E1C1C;
+
 $fireBrick: #AD2222;
-$deepChesnut: #BB4A4A;
-$Fuzzy: #CA7272;
+
 
 $sand: #efb6ac;
 $green: #183A37;
@@ -11,6 +9,8 @@ $lilac: #C8ADC0;
 $snow: #f9f9f9;
 $darkSnow: #ddd;
 $black: #000;
+
+$backgroundblend: #b1706761;
 
 $transparent: #ffffff45;
 $gradientBackground: linear-gradient(#3498db, #9b59b6);
