--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -48,6 +48,13 @@ body {
           width: 527px;
           height: 318px;
           float: left;
+          @include overlaycenter;
+          @include overlay;
+          .overlay {
+            .text {
+              font-size: 25px;
+            }
+          }
         }
       }
     }
@@ -110,6 +117,13 @@ body {
           width: 500px;
           height: 300px;
           float: left;
+          @include overlaycenter;
+          @include overlay;
+          .overlay {
+            .text {
+              font-size: 25px;
+            }
+          }
         }
       }
     }
@@ -180,6 +194,13 @@ body {
           width: 500px;
           height: 300px;
           float: left;
+          @include overlaycenter;
+          @include overlay;
+          .overlay {
+            .text {
+              font-size: 25px;
+            }
+          }
         }
       }
     }
@@ -284,6 +305,13 @@ body {
         width: 1000px;
         height: 200px;
         float: left;
+        @include overlayleft;
+        @include overlay;
+        .overlay {
+          .text {
+            font-size: 25px;
+          }
+        }
       }
     }
   }
