--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -14,7 +14,7 @@ body {
   section {
     margin: 0 auto;
 
-
+    /////////Camping///////////////
   #camping {
     padding: 22em;
     padding-top: 8em;
@@ -34,6 +34,7 @@ body {
       width: 250px;
       height: 150px;
     }
+    // slideshow
     .slideshow {
       border: 1px solid black;
       width: 527px;
