--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -13,7 +13,7 @@ body {
   }
   section {
     margin: 0 auto;
-
+////////////////////////////////////////////////////////////////////////////////
     /////////Camping///////////////
   #camping {
     padding: 22em;
@@ -95,6 +95,7 @@ body {
       @include overlay;
     }
   }
+/////////////////////////////////////////////////////////////
   #fishing {
     display: grid;
     grid-template-areas:
@@ -171,6 +172,7 @@ body {
       @include overlay;
     }
   }
+///////////////////////////////////////////////////////////////////////
   #hiking {
     display: grid;
     grid-template-areas:
@@ -248,6 +250,7 @@ body {
       @include overlay;
     }
   }
+  ////////////////////////////////////////////////////////////
   #rock-climbing {
     display: grid;
     grid-template-areas:
